# accessimed

./: .gitignore  AccessiMed_Complete_Project_Context.md  README.md  edge-judging-criteria.docx
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  logging.py  user_config.py
backend/app/db/: models.py  session.py
backend/app/repositories/: scans.py
backend/app/schemas/: requests.py  responses.py
backend/app/services/: accessibility.py  auditor.py  container.py  crawler.py  fixes.py  llm.py  local_code.py  reporter.py  scan.py  workflow.py
backend/tests/: conftest.py  test_api.py  test_local_code.py  test_services.py  test_user_config.py
backend/tests/fixtures/site/: forms.html  index.html
demo-site/: README.md  appointments.html  index.html  portal.html  styles.css
docs/: accessimed-workflow.md  ayush-backend-guide.md  complete-demo-guide.md  demo-validation.md  live-demo-sites.md  system-architecture-diagram-prompt.md  technical-architecture.md  testing-summary.md  workflow-diagram-prompt.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  FixOptions.jsx  ScanForm.jsx  Toast.jsx
frontend/src/components/dashboard/: DashboardSummaryCard.jsx  EmptyState.jsx  FilterPanel.jsx  FixModal.jsx  GitHubPRDrawer.jsx  SeverityBadge.jsx  UtilityPanel.jsx  ViolationCard.jsx  ViolationDetailsModal.jsx
frontend/src/components/site/: FAQAccordion.jsx  GovernmentNewsSection.jsx  Layout.jsx  MarketingBlocks.jsx  NewsCarousel.jsx  Sections.jsx  SiteFooter.jsx  SiteHeader.jsx
frontend/src/components/ui/: Button.jsx  GlassPanel.jsx  PillBadge.jsx  Section.jsx
frontend/src/data/: dashboardMockData.js  newsItems.js
frontend/src/layouts/: SiteLayout.jsx
frontend/src/pages/: AboutPage.jsx  DashboardPage.jsx  ScanPage.jsx
frontend/src/services/: scanService.js
